reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burned__c</fullName>
    <label>Calories Burned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>