reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/HRV__c.field-meta.xml
<CustomField>
    <fullName>HRV__c</fullName>
    <label>HRV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>