reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <label>Meals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>