reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/Mood__c.field-meta.xml
<CustomField>
    <fullName>Mood__c</fullName>
    <label>Mood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>