reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/RHR__c.field-meta.xml
<CustomField>
    <fullName>RHR__c</fullName>
    <label>RHR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>