reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/Sleep_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Hours__c</fullName>
    <label>Sleep Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>