reusable-ai-wellness/force-app/main/default/objects/Daily_Log__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <label>Workout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>